--- a/src/app/pages/profile/profile.html
+++ b/src/app/pages/profile/profile.html
@@ -7,9 +7,9 @@
     </div>
   </div>
 
-  <h2 class="text-2xl mb-1 text-gray-800">My Profile</h2>
+  <h2 class="text-2xl font-semibold text-[#0F7B8A]">My Profile</h2>
   <p class="text-gray-500 mb-4">View and manage your profile information</p>
-  
+
   <div class="grid grid-cols-1 mx-auto w-full lg:w-1/2 gap-5">
     <!-- Profile Header -->
     <div class="bg-white col-span-1 border border-gray-200 rounded-lg p-6 flex flex-col items-center gap-6">
@@ -19,15 +19,22 @@
           {{ admin?.firstName?.charAt(0) }}{{ admin?.lastName?.charAt(0) }}
         </span>
       </div>
-      
+
       <div class="flex-1 text-center">
-        <h3 class="text-xl font-semibold text-gray-800">{{ admin?.firstName }} {{ admin?.lastName }}</h3>
-        <p class="text-gray-500">{{ admin?.position?.name }}</p>
-        <p class="text-sm text-white w-fit px-2 py-1 bg-pro mx-auto rounded mt-1 capitalize">
+        <h3 class="text-xl font-semibold text-[#0F7B8A] mb-2">{{ admin?.firstName }} {{ admin?.lastName }}</h3>
+        <p class="border inline-flex items-center justify-center rounded-md px-2 py-0.5 text-xs font-medium bg-[#E0F4F6] text-[#0F7B8A] mb-4">
           {{ admin?.role }}
         </p>
+        <div class="flex gap-2">
+        <p class="border inline-flex items-center justify-center rounded-md px-2 py-0.5 text-xs font-medium bg-[#E0F4F6] text-[#0F7B8A] ml-9">
+          {{ admin?.position?.name }}
+        </p>
+        <p class="border inline-flex items-center justify-center rounded-md px-2 py-0.5 text-xs font-medium bg-gray-200 text-gray-500">
+          {{ admin?.department?.name }}
+        </p>
+        </div>
       </div>
-      
+
       <div class="self-start mt-3 border-t border-gray-200 w-full">
         <div class="bg-white py-6">
           <div class="space-y-3 text-sm text-gray-600 flex flex-col gap-4">
@@ -64,9 +71,9 @@
           </div>
         </div>
       </div>
-      
-      <button 
-        (click)="openEditForm()" 
+
+      <button
+        (click)="openEditForm()"
         class="bg-pro w-full cursor-pointer text-white px-4 py-3 rounded-lg hover:bg-pro-hover transition font-medium"
       >
         Edit Profile
@@ -77,25 +84,25 @@
   <!-- Edit Profile Modal -->
   <div
     *ngIf="showEditForm"
-    class="fixed inset-0 flex items-center justify-center bg-black/40 backdrop-blur-sm z-50"
+    class="fixed inset-0 bg-black/30 flex items-center justify-center z-50 backdrop-blur-sm backdrop-brightness-80"
   >
     <div class="bg-white rounded-2xl shadow-xl p-6 w-full max-w-md relative max-h-[90vh] overflow-y-auto">
-      <h3 class="text-2xl font-semibold mb-6 text-gray-800">
+      <h3 class="text-2xl font-semibold mb-6 text-gray-600">
         Edit Profile
       </h3>
 
       <div class="grid grid-cols-1 gap-5">
         <!-- First Name -->
         <div class="relative">
-          <input 
-            [(ngModel)]="tempAdmin.firstName" 
-            type="text" 
-            id="firstName" 
+          <input
+            [(ngModel)]="tempAdmin.firstName"
+            type="text"
+            id="firstName"
             placeholder=" "
             class="peer w-full border rounded-lg p-3 border-gray-300 focus:border-pro focus:ring-1 focus:ring-pro outline-none transition"
           />
-          <label 
-            for="firstName" 
+          <label
+            for="firstName"
             class="absolute left-3 top-3 text-gray-400 text-sm transition-all duration-300
                    peer-placeholder-shown:top-3 peer-placeholder-shown:text-gray-400 peer-placeholder-shown:text-sm
                    peer-focus:-top-2 peer-focus:text-pro peer-focus:text-xs peer-focus:font-medium
@@ -107,15 +114,15 @@
 
         <!-- Last Name -->
         <div class="relative">
-          <input 
-            [(ngModel)]="tempAdmin.lastName" 
-            type="text" 
-            id="lastName" 
+          <input
+            [(ngModel)]="tempAdmin.lastName"
+            type="text"
+            id="lastName"
             placeholder=" "
             class="peer w-full border rounded-lg p-3 border-gray-300 focus:border-pro focus:ring-1 focus:ring-pro outline-none transition"
           />
-          <label 
-            for="lastName" 
+          <label
+            for="lastName"
             class="absolute left-3 top-3 text-gray-400 text-sm transition-all duration-300
                    peer-placeholder-shown:top-3 peer-placeholder-shown:text-gray-400 peer-placeholder-shown:text-sm
                    peer-focus:-top-2 peer-focus:text-pro peer-focus:text-xs peer-focus:font-medium
@@ -127,15 +134,15 @@
 
         <!-- Nick Name -->
         <div class="relative">
-          <input 
-            [(ngModel)]="tempAdmin.nickname" 
-            type="text" 
-            id="nickname" 
+          <input
+            [(ngModel)]="tempAdmin.nickname"
+            type="text"
+            id="nickname"
             placeholder=" "
             class="peer w-full border rounded-lg p-3 border-gray-300 focus:border-pro focus:ring-1 focus:ring-pro outline-none transition"
           />
-          <label 
-            for="nickname" 
+          <label
+            for="nickname"
             class="absolute left-3 top-3 text-gray-400 text-sm transition-all duration-300
                    peer-placeholder-shown:top-3 peer-placeholder-shown:text-gray-400 peer-placeholder-shown:text-sm
                    peer-focus:-top-2 peer-focus:text-pro peer-focus:text-xs peer-focus:font-medium
@@ -147,15 +154,15 @@
 
         <!-- Email -->
         <div class="relative">
-          <input 
-            [(ngModel)]="tempAdmin.email" 
-            type="email" 
-            id="email" 
+          <input
+            [(ngModel)]="tempAdmin.email"
+            type="email"
+            id="email"
             placeholder=" "
             class="peer w-full border rounded-lg p-3 border-gray-300 focus:border-pro focus:ring-1 focus:ring-pro outline-none transition"
           />
-          <label 
-            for="email" 
+          <label
+            for="email"
             class="absolute left-3 top-3 text-gray-400 text-sm transition-all duration-300
                    peer-placeholder-shown:top-3 peer-placeholder-shown:text-gray-400 peer-placeholder-shown:text-sm
                    peer-focus:-top-2 peer-focus:text-pro peer-focus:text-xs peer-focus:font-medium
@@ -256,14 +263,14 @@
 
       <!-- Buttons -->
       <div class="flex justify-end gap-3 mt-6">
-        <button 
+        <button
           (click)="closeForm()"
           [disabled]="isLoading"
           class="px-4 py-2 rounded-lg border border-gray-300 text-gray-700 hover:bg-gray-50 transition font-medium disabled:opacity-50"
         >
           Cancel
         </button>
-        <button 
+        <button
           (click)="saveChanges()"
           [disabled]="isLoading"
           class="px-4 py-2 rounded-lg bg-pro text-white hover:bg-pro-hover transition font-medium disabled:opacity-50 flex items-center gap-2"
